--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,7 +34,7 @@ services:
       - PGID=${USER_ID}
       - TZ=${TZ}
       - VERSION=docker
-      - PLEX_CLAIM=${PLEX_CLAIM}
+      #- PLEX_CLAIM=${PLEX_CLAIM}
     ports:
       - 32400:32400
     devices:
