--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -437,6 +437,6 @@ services:
     ports:
       - 9443:9443
     volumes:
-      - data:/data
+      - ${BASE_PATH}/portainer/data:/data
       - /var/run/docker.sock:/var/run/docker.sock
     restart: unless-stopped
